--- a/TSAR/Web.config
+++ b/TSAR/Web.config
@@ -12,9 +12,14 @@
     <add name="DefaultConnection" connectionString="Data Source=tsarserv.database.windows.net;Initial Catalog=tsardb;Integrated Security=False;User ID=dotcom1;Password=dotcomdev1!;Connect Timeout=15;Encrypt=True;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
       providerName="System.Data.SqlClient" />
   </connectionStrings>-->
-    <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-TSAR-201703151015588.mdf;Initial Catalog=aspnet-TSAR-201703151015588;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <!--<connectionStrings>
+      <add name="DefaultConnection" connectionString="Data Source=10.3.8.10;Initial Catalog=201726; user Id=201726; password=dcrAhAw6; Integrated Security=false;" providerName="System.Data.SqlClient" />
+  </connectionStrings>-->
+   <connectionStrings>
+    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-TSAR-20170315101551001.mdf;Initial Catalog=aspnet-TSAR-20170315101551001;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
+  
+  
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
