--- a/TSAR/TSAR.csproj
+++ b/TSAR/TSAR.csproj
@@ -228,7 +228,9 @@
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="css\agency.css" />
-    <Content Include="css\agency.min.css" />
+    <Content Include="css\agency.min.css">
+      <DependentUpon>agency.css</DependentUpon>
+    </Content>
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
@@ -237,6 +239,9 @@
     <Content Include="img\about\2.jpg" />
     <Content Include="img\about\3.jpg" />
     <Content Include="img\about\4.jpg" />
+    <Content Include="img\Elephant1.jpg" />
+    <Content Include="img\elephant22.jpg" />
+    <Content Include="img\Elephant3.jpg" />
     <Content Include="img\header-bg.jpg" />
     <Content Include="img\logos\creative-market.jpg" />
     <Content Include="img\logos\designmodo.jpg" />
