Ammend Default Admin user

--- a/TSAR/Web.config
+++ b/TSAR/Web.config
@@ -16,7 +16,7 @@
       <add name="DefaultConnection" connectionString="Data Source=10.3.8.10;Initial Catalog=201726; user Id=201726; password=dcrAhAw6; Integrated Security=false;" providerName="System.Data.SqlClient" />
   </connectionStrings>-->
    <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-TSAR-210.mdf;Initial Catalog=aspnet-TSAR-210;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-TSAR-Local.mdf;Initial Catalog=aspnet-TSAR-Local;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   
   
