Fixed Consultant Google Maps Integration. did Migrations, changed href to button

--- a/TSAR/TSAR.csproj
+++ b/TSAR/TSAR.csproj
@@ -54,7 +54,7 @@
     </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="Newtonsoft.Json, Version=10.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>..\packages\Newtonsoft.Json.10.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <HintPath>..\packages\Newtonsoft.Json.10.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
@@ -192,6 +192,10 @@
     <Compile Include="Migrations\201704030715193_InitialCreate.cs" />
     <Compile Include="Migrations\201704030715193_InitialCreate.Designer.cs">
       <DependentUpon>201704030715193_InitialCreate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201704030742119_ShriyaInitialCreate.cs" />
+    <Compile Include="Migrations\201704030742119_ShriyaInitialCreate.Designer.cs">
+      <DependentUpon>201704030742119_ShriyaInitialCreate.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
@@ -416,6 +420,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201704030715193_InitialCreate.resx">
       <DependentUpon>201704030715193_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201704030742119_ShriyaInitialCreate.resx">
+      <DependentUpon>201704030742119_ShriyaInitialCreate.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
