changed images for faster loading

--- a/TSAR/TSAR.csproj
+++ b/TSAR/TSAR.csproj
@@ -234,6 +234,7 @@
     <Content Include="img\about\2.jpg" />
     <Content Include="img\about\3.jpg" />
     <Content Include="img\about\4.jpg" />
+    <Content Include="img\comp1.jpg" />
     <Content Include="img\Elephant1.jpg" />
     <Content Include="img\elephant22.jpg" />
     <Content Include="img\Elephant3.jpg" />
