--- a/TSAR/TSAR.csproj
+++ b/TSAR/TSAR.csproj
@@ -190,6 +190,7 @@
     <Compile Include="Controllers\NewsletterController.cs" />
     <Compile Include="Controllers\RoleController.cs" />
     <Compile Include="Controllers\SendMailerController.cs" />
+    <Compile Include="Controllers\TimesheetsController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -209,6 +210,7 @@
     <Compile Include="Models\ManageTravel.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\Subscription.cs" />
+    <Compile Include="Models\Timesheet.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -430,6 +432,11 @@
     <Content Include="Views\Budget\Edit.cshtml" />
     <Content Include="Views\Budget\Index.cshtml" />
     <Content Include="Views\Dashboard\Dashboard.cshtml" />
+    <Content Include="Views\Timesheets\Create.cshtml" />
+    <Content Include="Views\Timesheets\Delete.cshtml" />
+    <Content Include="Views\Timesheets\Details.cshtml" />
+    <Content Include="Views\Timesheets\Edit.cshtml" />
+    <Content Include="Views\Timesheets\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
