--- a/TSAR/TSAR.csproj
+++ b/TSAR/TSAR.csproj
@@ -191,6 +191,8 @@
     <Compile Include="Controllers\NewsletterController.cs" />
     <Compile Include="Controllers\RolesController.cs" />
     <Compile Include="Controllers\SendMailerController.cs" />
+    <Compile Include="Controllers\TicketsController.cs" />
+    <Compile Include="Controllers\TimesheetsController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
