--- a/TSAR/TSAR.csproj
+++ b/TSAR/TSAR.csproj
@@ -262,10 +262,21 @@
   <ItemGroup>
     <Content Include="bin\Antlr3.Runtime.dll" />
     <Content Include="bin\Antlr3.Runtime.pdb" />
+    <Content Include="bin\BouncyCastle.Crypto.dll" />
     <Content Include="bin\EntityFramework.dll" />
     <Content Include="bin\EntityFramework.SqlServer.dll" />
     <Content Include="bin\EntityFramework.SqlServer.xml" />
     <Content Include="bin\EntityFramework.xml" />
+    <Content Include="bin\Gnostice.PDFOne.Controls.Web.dll" />
+    <Content Include="bin\Gnostice.PDFOne.dll" />
+    <Content Include="bin\Gnostice.PDFOne.Extensions.MVC.dll" />
+    <Content Include="bin\Gnostice.PDFOne.PDFPrinter.dll" />
+    <Content Include="bin\Gnostice.PDFOne.Windows.PDFBookmarks.dll" />
+    <Content Include="bin\Gnostice.PDFOne.Windows.PDFViewer.dll" />
+    <Content Include="bin\Gnostice.XtremeFontEngine.dll" />
+    <Content Include="bin\Gnostice.XtremeImageEngine.dll" />
+    <Content Include="bin\Ionic.Zlib.dll" />
+    <Content Include="bin\itextsharp.dll" />
     <Content Include="bin\Microsoft.AspNet.Identity.Core.dll" />
     <Content Include="bin\Microsoft.AspNet.Identity.Core.xml" />
     <Content Include="bin\Microsoft.AspNet.Identity.EntityFramework.dll" />
@@ -274,6 +285,10 @@
     <Content Include="bin\Microsoft.AspNet.Identity.Owin.xml" />
     <Content Include="bin\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.dll" />
     <Content Include="bin\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.xml" />
+    <Content Include="bin\Microsoft.IdentityModel.Logging.dll" />
+    <Content Include="bin\Microsoft.IdentityModel.Logging.xml" />
+    <Content Include="bin\Microsoft.IdentityModel.Tokens.dll" />
+    <Content Include="bin\Microsoft.IdentityModel.Tokens.xml" />
     <Content Include="bin\Microsoft.Owin.dll" />
     <Content Include="bin\Microsoft.Owin.Host.SystemWeb.dll" />
     <Content Include="bin\Microsoft.Owin.Host.SystemWeb.xml" />
@@ -344,6 +359,8 @@
     <Content Include="bin\roslyn\vbc.rsp" />
     <Content Include="bin\roslyn\VBCSCompiler.exe" />
     <Content Include="bin\roslyn\VBCSCompiler.exe.config" />
+    <Content Include="bin\System.IdentityModel.Tokens.Jwt.dll" />
+    <Content Include="bin\System.IdentityModel.Tokens.Jwt.xml" />
     <Content Include="bin\System.Net.Http.Formatting.dll" />
     <Content Include="bin\System.Net.Http.Formatting.xml" />
     <Content Include="bin\System.Web.Helpers.dll" />
@@ -365,7 +382,10 @@
     <Content Include="bin\System.Web.WebPages.Razor.xml" />
     <Content Include="bin\System.Web.WebPages.xml" />
     <Content Include="bin\TSAR.dll" />
+    <Content Include="bin\TSAR.dll.config" />
     <Content Include="bin\TSAR.pdb" />
+    <Content Include="bin\Twilio.dll" />
+    <Content Include="bin\Twilio.xml" />
     <Content Include="bin\WebGrease.dll" />
     <Content Include="Content\bootstrap-theme.css" />
     <Content Include="Content\bootstrap-theme.min.css" />
@@ -430,7 +450,6 @@
     <Content Include="Content\bootstrap.css.map" />
     <Content Include="Content\bootstrap-theme.min.css.map" />
     <Content Include="Content\bootstrap-theme.css.map" />
-    <Content Include="bin\TSAR.dll.config" />
     <None Include="Properties\PublishProfiles\TSAR1 - Web Deploy.pubxml" />
     <None Include="Properties\PublishProfiles\TSAR1.pubxml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
