--- a/TSAR/TSAR.csproj
+++ b/TSAR/TSAR.csproj
@@ -220,6 +220,7 @@
     <Compile Include="Controllers\SendMailerController.cs" />
     <Compile Include="Controllers\TicketsController.cs" />
     <Compile Include="Controllers\TimesheetHistoryController.cs" />
+    <Compile Include="Controllers\Timesheets1Controller.cs" />
     <Compile Include="Controllers\TimesheetsController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -629,11 +630,11 @@
     <Content Include="Views\Rating\Details.cshtml" />
     <Content Include="Views\Rating\Edit.cshtml" />
     <Content Include="Views\Rating\Index.cshtml" />
-    <Content Include="Views\TimesheetHistory\Create.cshtml" />
-    <Content Include="Views\TimesheetHistory\Delete.cshtml" />
-    <Content Include="Views\TimesheetHistory\Details.cshtml" />
-    <Content Include="Views\TimesheetHistory\Edit.cshtml" />
-    <Content Include="Views\TimesheetHistory\Index.cshtml" />
+    <Content Include="Views\AccomodationFiles\Create.cshtml" />
+    <Content Include="Views\AccomodationFiles\Delete.cshtml" />
+    <Content Include="Views\AccomodationFiles\Details.cshtml" />
+    <Content Include="Views\AccomodationFiles\Edit.cshtml" />
+    <Content Include="Views\AccomodationFiles\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
