added scroll to top button

--- a/TSAR/TSAR.csproj
+++ b/TSAR/TSAR.csproj
@@ -434,6 +434,7 @@
     <Content Include="img\team\Anoop.jpg" />
     <Content Include="img\team\devashen.jpg" />
     <Content Include="img\team\Ivan.jpg" />
+    <Content Include="img\up arrow2.png" />
     <Content Include="js\agency.js" />
     <Content Include="js\agency.min.js" />
     <Content Include="js\contact_me.js" />
