Edited Rating and Ticket Views

--- a/TSAR/TSAR.csproj
+++ b/TSAR/TSAR.csproj
@@ -850,6 +850,7 @@
     <Content Include="Views\Rating\Edit.cshtml" />
     <Content Include="Views\Rating\Index.cshtml" />
     <Content Include="Views\Calendar\Index.cshtml" />
+    <Content Include="Views\Rating\Done.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
