--- a/TSAR/TSAR.csproj
+++ b/TSAR/TSAR.csproj
@@ -218,13 +218,13 @@
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\LeavesController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
-    <Compile Include="Controllers\ManageTravelController.cs" />
     <Compile Include="Controllers\NewsletterController.cs" />
     <Compile Include="Controllers\RatingController.cs" />
     <Compile Include="Controllers\RolesController.cs" />
     <Compile Include="Controllers\SendMailerController.cs" />
     <Compile Include="Controllers\TicketsController.cs" />
     <Compile Include="Controllers\TimesheetsController.cs" />
+    <Compile Include="Controllers\TravelController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -244,7 +244,6 @@
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\Leave.cs" />
     <Compile Include="Models\MailModel.cs" />
-    <Compile Include="Models\ManageTravel.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\Rating.cs" />
     <Compile Include="Models\RolesLogic.cs" />
@@ -253,6 +252,7 @@
     <Compile Include="Models\Subscription.cs" />
     <Compile Include="Models\Ticket.cs" />
     <Compile Include="Models\Timesheet.cs" />
+    <Compile Include="Models\Travel.cs" />
     <Compile Include="Models\UserLogic.cs" />
     <Compile Include="Models\UserTable.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -803,11 +803,6 @@
     <Content Include="Views\Clients\Details.cshtml" />
     <Content Include="Views\Clients\Edit.cshtml" />
     <Content Include="Views\Clients\Index.cshtml" />
-    <Content Include="Views\ManageTravel\Create.cshtml" />
-    <Content Include="Views\ManageTravel\Delete.cshtml" />
-    <Content Include="Views\ManageTravel\Details.cshtml" />
-    <Content Include="Views\ManageTravel\Edit.cshtml" />
-    <Content Include="Views\ManageTravel\Index.cshtml" />
     <Content Include="Views\Home\Sent.cshtml" />
     <Content Include="Views\Commissions\Create.cshtml" />
     <Content Include="Views\Commissions\Delete.cshtml" />
@@ -857,6 +852,11 @@
     <Content Include="Views\Tickets\Review.cshtml" />
     <Content Include="Views\Tickets\Done.cshtml" />
     <Content Include="Views\Tickets\MyTickets.cshtml" />
+    <Content Include="Views\Travel\Create.cshtml" />
+    <Content Include="Views\Travel\Delete.cshtml" />
+    <Content Include="Views\Travel\Details.cshtml" />
+    <Content Include="Views\Travel\Edit.cshtml" />
+    <Content Include="Views\Travel\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
