--- a/TSAR/TSAR.csproj
+++ b/TSAR/TSAR.csproj
@@ -243,6 +243,7 @@
     <Compile Include="Models\File.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\Leave.cs" />
+    <Compile Include="Models\LeaveType.cs" />
     <Compile Include="Models\MailModel.cs" />
     <Compile Include="Models\ManageTravel.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
@@ -264,6 +265,7 @@
     <Compile Include="SmsHelper\ITwilioSmsRestClient.cs" />
     <Compile Include="SmsHelper\TwilioSmsRestClient.cs" />
     <Compile Include="Startup.cs" />
+    <Compile Include="ViewModels\LeaveTypeViewModel.cs" />
     <Compile Include="ViewModels\TravelViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
