--- a/TSAR/packages.config
+++ b/TSAR/packages.config
@@ -5,6 +5,7 @@
   <package id="DHTMLX.Scheduler.MVC3.Sample" version="1.0.3" targetFramework="net452" />
   <package id="DHTMLX.Scheduler.NET" version="3.3.27.0" targetFramework="net452" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
+  <package id="Grid.Mvc" version="3.0.0" targetFramework="net452" />
   <package id="jQuery" version="3.1.1" targetFramework="net452" />
   <package id="jQuery.Validation" version="1.16.0" targetFramework="net452" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net452" />
