--- a/TSAR/TSAR.csproj
+++ b/TSAR/TSAR.csproj
@@ -857,6 +857,8 @@
     <Content Include="Views\Travel\Details.cshtml" />
     <Content Include="Views\Travel\Edit.cshtml" />
     <Content Include="Views\Travel\Index.cshtml" />
+    <Content Include="Views\Timesheets\ViewTimeheets.cshtml" />
+    <Content Include="Views\Timesheets\SignOff.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
