Added an sms feature Created a "completed" view Created directory buttons

--- a/TSAR/TSAR.csproj
+++ b/TSAR/TSAR.csproj
@@ -872,6 +872,7 @@
     <Content Include="Views\Shared\_Grid.cshtml" />
     <Content Include="Views\Timesheets\ViewTimeheets.cshtml" />
     <Content Include="Views\Timesheets\SignOff.cshtml" />
+    <Content Include="Views\Leaves\Done.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
